ViTables ChangeLog
==================
** November 15, 2013 **
Ungrouping arrays has been implemented in the columnar_org plugin.
At the moment I just see one minor bug. All functionality has been
implemented so its time for a final debug and refactor sessions.

** November 14, 2013 **
Code in the columnar_org plugin has been debugged and refactored.
A small bug in the closing arrays process remains open. Ungrouping hasn't
been implemented yet.

** November 13, 2013 **
Still working in the columnar_org plugin.
Grouping arrays has been debugged and now it works well in most cases.
Closing arrays has been implemented. More debugging and breaking-up the
groups to recover their components are pending tasks.

** November 11, 2013 **
Still working in the columnar_org plugin.
Grouping arrays has been debugged and now it works well in most cases.
Closing arrays and breaking-up the groups to recover components remains
to be done.

** October 23, 2013 **
Still working in the columnar_org plugin.
Grouping arrays is working with some minor (I think) bugs.

** October 23, 2013 **
Still working in the columnar_org plugin.
How the plugin should work is now clearer: select several arrays via their
checkboxes and launch the command Join Arrays. If the selected collection of
arrays cannot be joined in a unique view then the launch command is disabled.

** October 21, 2013 **
A new plugin, columnar_org, is being developed.
It will allow to combine several Array views with the same number of rows to
be combined in a unique view (it is a feature request).

** October 20, 2013 **
Minor changes have been done in vtapp, plugin_utils and vtgui modules.
In addition, the docstrings of several modules have been fixed.

** October 14, 2013 **
The docstrings of csv, dbstreesort and timeseries plugins have been fixed.

** October 10, 2013 **
The Plugins manager has been debugged and made more robust.
Also some typos in docstrings have been corrected.
