@@ -1,5 +1,9 @@
 ViTables ChangeLog
 ==================
+** November 19, 2013 **
+First working version of the columnar_org plugin is available.
+I think I've fixed all serious bugs.
+
 ** November 15, 2013 **
 Ungrouping arrays has been implemented in the columnar_org plugin.
 At the moment I just see one minor bug. All functionality has been
